k8s/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    alb.ingress.kubernetes.io/group.name: "devsecops-stack"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:284432073095:certificate/8a88e62e-795e-42ad-9b5a-ecf8730b2528
    alb.ingress.kubernetes.io/actions.frontend-weights: '{"Type": "forward", "ForwardConfig": {"TargetGroups": [{"ServiceName": "frontend-v1-service", "Port": "80", "Weight": 100}, {"ServiceName": "frontend-v2-service", "Port": "80", "Weight": 0}]}}'
spec:
  ingressClassName: alb
  rules:
  - host: app.justinidahosa.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-weights
            port:
              name: use-annotation
